Bug 41206 - [bisected i965]oglc pxconv-draw(basic.allCases) fails
Summary: [bisected i965]oglc pxconv-draw(basic.allCases) fails
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: All Linux (All)
: high normal
Assignee: Ian Romanick
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-25 22:54 UTC by fangxun
Modified: 2012-10-30 09:50 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description fangxun 2011-09-25 22:54:23 UTC
System Environment:
--------------------------
Arch:           i386
Platform:       huronriver 
Libdrm:         (master)2.4.26-9-gcfee5218b17a2741e5519ed44091171e01f0dbb2
Mesa:           (master)06ae4a62b1b3c668a5b50661df25d87f8c2679ef
Xserver: (master)xorg-server-1.11.0-49-g7fb4bef0394a5d09680985d34bce8252b61493cb
Xf86_video_intel: (master)2.16.0-83-g6bbb88af096e054877409a54d0e0a4ccf5ee317e
Kernel_unstable: (drm-intel-next)64a742fac3a22f57303d8f1b7e347350a1c48254


Bug detailed description:
-------------------------
It happens on Ironlake and sandybridge. Below are cases failed due to the same commit.
oglc pxstore-draw(basic.swapBytes)
oglc pxstore-draw(basic.allignment)
oglc pxstore-draw(basic.subImageExtraction)
oglc float-texture(basic.getteximage)
oglc float-texture(mipmap.manual)
oglc float-texture(range.overflow)
oglc float-texture(range.underflow)

Bisect find 03e623a27b95ef228fb4fca71c6d7c7a21630033 is the first bad commit.
commit 03e623a27b95ef228fb4fca71c6d7c7a21630033
Author:     Eric Anholt <eric@anholt.net>
AuthorDate: Tue Sep 20 15:27:07 2011 -0700
Commit:     Eric Anholt <eric@anholt.net>
CommitDate: Thu Sep 22 10:58:34 2011 -0700

    i965: Add support for GL_EXT_packed_float.

    This doesn't cover support for this format as a renderbuffer yet.  The
    spec allows implementations to not support it, though it is something
    we do want to support.

    Only one failure in piglit on gen6, which is texwrap with bordercolor
    (as usual).

    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>


Reproduce steps:
----------------
1. start X
2. ./oglconform -z -s -suite all -v 2 -D 115 -test pxconv-draw basic.allCases
Comment 1 Eric Anholt 2011-10-28 12:10:56 UTC
commit 3d7477206d7a345eb53df5c1288a5b34e83bc2d8
Author: Eric Anholt <eric@anholt.net>
Date:   Tue Oct 25 16:53:00 2011 -0700

    u_format: Fix bitshifting for unpacking from 10F.
    
    This code was copy and pasted from the 11F unpacking, but not updated
    for actually being 10 bits instead of 11.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=41206
    Reviewed-by: Marek Ol ák <maraeo@gmail.com>
    Reviewed-by: Ian Romanick <ian.d.romanick@intel.com>
Comment 2 fangxun 2012-10-30 09:50:25 UTC
Verified with latest mesa master and 9.0 branch.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.